Ejemplo de uso del template.

--- a/Tangerine/Tangerine/Areas/Template/Views/Shared/_Layout.cshtml
+++ b/Tangerine/Tangerine/Areas/Template/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 
         <header class="main-header">
             <!-- Logo -->
-            <a href="Dashboard" class="logo">
+            <a href="@Url.Action( actionName: "Dashboard", controllerName: "AdminLTE", routeValues: new { Area = "Template" })" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <span class="logo-mini"><b>A</b>LT</span>
                 <!-- logo for regular state and mobile devices -->
